components/trident-protect-object-store/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trident-protect
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
