components/trident-protect-object-store/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trident-protect-bucket
spec:
  path: /
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: http-minio
  wildcardPolicy: None
